# experimentation-lab

./: .env.example  .gitignore  CITATION.cff  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: incorrect-claim.md
.github/workflows/: ci.yml
docs/: index.html
docs/assets/: explainer.js  site.css
docs/assets/data/: contamination.js  contamination.json  cuped.js  cuped.json  headline_results.json  interference.js  interference.json  multiple_comparisons.js  multiple_comparisons.json  novelty.js  novelty.json  peeking.js  peeking.json  power.js  power.json  quasi.js  quasi.json  randomization.js  randomization.json  srm.js  srm.json  subgroups.js  subgroups.json  switchback.js  switchback.json  test_choice.js  test_choice.json
docs/explainers/: cuped.html  decision.html  interference.html  peeking.html  power.html  quasi.html  randomization.html  srm.html  subgroups.html  switchback.html  test-choice.html
eval/: build_designs.py  harness.py  metrics.py
eval/labeled_designs/: designs.json  labels.json
eval/results/: metrics.json  transcripts.json
notebooks/: 01_engine_walkthrough.ipynb  02_pathology_gallery.ipynb  03_review_agent_eval.ipynb
scripts/: build_notebooks.py  regenerate_figures.py  render_peeking_media.py
src/lab/: __init__.py
src/review_agent/: agent.py  evidence.py
tests/integration/: test_clean_experiment.py  test_new_pathologies.py  test_pathologies.py
tests/unit/: test_corrections.py  test_populations.py  test_reporting.py  test_review_agent.py  test_sequential.py  test_stats.py
(+31 files in other folders)
