[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "experimentation-lab"
version = "0.1.0"
description = "Simulation engine for A/B test pathologies with ground-truth-known effects"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.11",
    "statsmodels>=0.14",
]

[project.optional-dependencies]
agent = [
    "anthropic>=0.40",
    "pydantic>=2.6",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "anthropic>=0.40",
    "pydantic>=2.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lab", "src/review_agent"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
